--- a/sass/global/global.scss
+++ b/sass/global/global.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  // min-width: 1200px;
+  min-width: 320px;
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 17px;
   line-height: 20px;
@@ -13,41 +13,9 @@ body {
 
 img {
   max-width: 100%;
-  /* height: auto; */
+  height: auto;
 }
 
 a {
   text-decoration: none;
-}
-
-.button {
-  display: inline-block;
-  box-sizing: border-box;
-  // min-width: 110px;
-  // max-width: 568px;
-  width: 100%;
-  padding: 15px 10px;
-  text-align: center;
-  font-size: 17px;
-  line-height: 20px;
-  font-weight: 700;
-  text-transform: uppercase;
-  text-decoration: none;
-
-  color: $text-grey;
-  background-color: $light;
-  border: 2px solid $text-grey;
-  cursor: pointer;
-}
-
-.container {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-@media (min-width: $tablet-width) {
-  .container {
-    padding-left: 50px;
-    padding-right: 50px;
-  }
 }
