--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -12,6 +12,7 @@
   }
 }
 .main-nav__item {
+  @include clear;
   display: block;
 
   padding-top: 30px;
@@ -71,6 +72,12 @@
 
 
 @media (min-width: $tablet-width) {
+  .main-nav {
+    position: relative;
+    width: auto;
+    margin: 0;
+  }
+
   .main-nav__toggle {
     display: none;
   }
@@ -79,7 +86,7 @@
     &--main {
       display: flex;
       justify-content: space-between;
-      // position: absolute;
+      // margin-right: auto;
       // bottom: 0;
       // transform: translateY(100%);
       width: 390px;
@@ -88,24 +95,26 @@
 
     &--user {
       display: flex;
+      text-align: right;
       position: absolute;
-      top: 0;
-      right: 130px;
-      float: right;
+      top: -85px;
+      left: 62%;
+
       width: 350px;
       // font-size: 0;
     }
   }
 
-  .page-header__delivery {
+.page-header__delivery {
     display: block;
     position: absolute;
     top: 115px;
-    right: 150px;
+    left: 62%;
+    margin-left: auto;
   }
 
-  .main-nav__item {
-    &--main {
+.main-nav__item {
+  &--main {
       padding-left: 0px;
       margin-right: 36px;
       border: 0;
@@ -130,20 +139,28 @@
 @media (min-width: $desktop-width) {
   .main-nav {
     display: flex;
+    // position: relative;
   }
 
   .main-nav__list {
   //   &--main {
-  //     position: static;
+
   //     float: left;
   //     transform: none;
   //   }
   //
+  &--user {
+    top: 0px;
+
+    width: 350px;
+    // font-size: 0;
+  }
     &--extra {
       display: flex;
       position: absolute;
       top: 80px;
-      left: 50px;
+      margin-right: auto;
+      // left: 3%;
       // transform: translateY(100%);
       // display: block;
       // width: 390px;
@@ -176,4 +193,8 @@
   //     }
     }
   }
+  .page-header__delivery {
+      left: 72%;
+      // margin-left: auto;
+    }
 }
