--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,8 @@
 @import "global/fonts.scss";
 @import "global/visually-hidden.scss";
 @import "global/global.scss";
+@import "global/button.scss";
+@import "global/container.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/page-main.scss";
