--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ a {
 
 @media (min-width: 768px) {
   .page-header__logo {
+    background-color: #ffffff;
     background-image: url("../img/mishka-logo-tablet.png");
     background-position: 0 0;
     background-repeat: no-repeat;
@@ -103,6 +104,7 @@ a {
   .page-header__logo {
     position: absolute;
     right: 50%;
+    background-color: #ffffff;
     background-image: url("../img/mishka-logo-desktop.png");
     background-position: 0 0;
     background-repeat: no-repeat;
@@ -699,16 +701,14 @@ a {
 .catalog__image {
   width: 260px;
   height: 195px;
-  margin-bottom: 28px;
-  order: 1; }
+  margin-bottom: 28px; }
 
 .catalog__title {
   padding-left: 28px;
   margin-bottom: 16px;
   font-size: 17px;
   line-height: 24px;
-  font-weight: 700;
-  order: 2; }
+  font-weight: 700; }
 
 .catalog__description {
   margin: 0;
@@ -728,8 +728,7 @@ a {
   justify-content: space-between;
   padding-left: 28px;
   padding-right: 28px;
-  padding-bottom: 30px;
-  order: 4; }
+  padding-bottom: 30px; }
 
 .catalog__price {
   font-size: 15px;
@@ -745,18 +744,45 @@ a {
   background-color: #ffffff;
   border: 0; }
 
+@media (min-width: 768px) {
+  .catalog__item {
+    flex-direction: row;
+    justify-content: space-between; }
+  .catalog__item__wrapper {
+    width: 334px;
+    padding-left: 30px;
+    padding-right: 30px; }
+  .catalog__image {
+    margin-bottom: 0; } }
+
+@media (min-width: 1150px) {
+  .catalog__list {
+    display: flex;
+    justify-content: space-between; }
+  .catalog__item {
+    flex-direction: column;
+    justify-content: flex-end; }
+  .catalog__item__wrapper {
+    width: 316px;
+    padding: 0; }
+  .catalog__image {
+    width: 316px;
+    height: 462px;
+    margin-bottom: 28px; } }
+
 .video {
   margin: 0;
   padding: 0;
   list-style: none;
-  margin-left: 30px;
-  margin-right: 30px;
+  position: relative;
   margin-bottom: 58px;
   color: #000000;
   background-color: #ffffff;
   border: 1px solid #ededed; }
 
 .video__title {
+  position: absolute;
+  top: 0;
   padding-left: 90px;
   margin-bottom: 25px;
   font-size: 17px;
@@ -764,6 +790,8 @@ a {
   font-weight: 700; }
 
 .video__play {
+  height: 150px;
+  margin-top: 50px;
   margin-bottom: 32px; }
 
 .video__description {
@@ -780,6 +808,45 @@ a {
   margin-left: 30px;
   margin-bottom: 33px; }
 
+@media (min-width: 768px) {
+  .video {
+    display: flex;
+    flex-direction: column; }
+  .video__play {
+    width: 666px;
+    height: 455px;
+    margin-top: 0; }
+  .video__wrapper {
+    padding-right: 42px;
+    padding-left: 42px; }
+  .video__title {
+    position: relative;
+    padding-left: 63px; }
+  .video__order {
+    width: 584px;
+    margin-left: 0; }
+  .video__description {
+    padding-left: 0;
+    font-size: 15px;
+    line-height: 30px; } }
+
+@media (min-width: 1150px) {
+  .video {
+    flex-direction: row; }
+  .video__wrapper {
+    width: 255px;
+    margin-top: 100px; }
+  .video__title {
+    padding: 0; }
+  .video__play {
+    width: 682px;
+    margin-right: 78px;
+    margin-bottom: 0; }
+  .video__order {
+    width: 230px; }
+  .video__description {
+    padding: 0; } }
+
 .order__intoduction {
   margin-bottom: 25px;
   font-size: 13px;
@@ -787,10 +854,13 @@ a {
   color: #444444; }
 
 .order__field {
+  margin: 0;
+  padding: 0;
+  list-style: none;
   border: none; }
-  .order__field .type {
+  .order__field--type {
     margin-bottom: 30px; }
-  .order__field .color {
+  .order__field--color {
     margin-bottom: 38px; }
   .order__field .order__additional {
     margin-bottom: 16px; }
@@ -901,6 +971,44 @@ a {
 .filter-input-checkbox + .filter__name:hover::after,
 .filter-input-checkbox + .filter__name:focus::after {
   opacity: 1; }
+
+@media (min-width: 768px) {
+  .order__intoduction {
+    font-size: 17px;
+    line-height: 30px; }
+  .order__list {
+    margin-left: 167px;
+    margin-top: -30px; }
+  .order__field--color {
+    background-color: #f1f1f1; }
+  .order__label {
+    width: 158px; }
+  .client-data__input-email {
+    margin-left: 117px; }
+  .client-data__input-phone,
+  .order__message {
+    margin-left: 137px; }
+  .color__list {
+    display: flex;
+    flex-wrap: wrap; }
+  .color__item {
+    margin-right: 20px; }
+  .order__wrapper {
+    display: flex;
+    justify-content: space-between; }
+  .order__comment {
+    order: 2; }
+  .order-button {
+    width: 230px; } }
+
+@media (min-width: 1150px) {
+  .order__intoduction {
+    margin-left: 175px; }
+  .order__wrapper {
+    margin-right: 175px;
+    margin-left: 237px; }
+  .order__field {
+    margin-left: 62px; } }
 
 .modal-order {
   width: 318px;
