--- a/sass/blocks/video.scss
+++ b/sass/blocks/video.scss
@@ -1,7 +1,8 @@
 .video {
   @include clear;
-  margin-left: 30px;
-  margin-right: 30px;
+  position: relative;
+  // margin-left: 30px;
+  // margin-right: 30px;
   margin-bottom: 58px;
 
   color: $dark;
@@ -10,6 +11,8 @@
 }
 
 .video__title {
+  position: absolute;
+  top: 0;
   padding-left: 90px;
   margin-bottom: 25px;
 
@@ -19,6 +22,8 @@
 }
 
 .video__play {
+  height: 150px;
+  margin-top: 50px;
   margin-bottom: 32px;
 }
 
@@ -35,4 +40,57 @@
   width: 190px;
   margin-left: 30px;
   margin-bottom: 33px;
+}
+@media (min-width: $tablet-width) {
+  .video {
+    display: flex;
+    flex-direction: column;
+  }
+  .video__play {
+    width: 666px;
+    height: 455px;
+    margin-top: 0;
+  }
+  .video__wrapper {
+    padding-right: 42px;
+    padding-left: 42px;
+  }
+  .video__title {
+    position: relative;
+    padding-left: 63px;
+  }
+
+  .video__order {
+    width: 584px;
+    margin-left: 0;
+  }
+  .video__description {
+    padding-left: 0;
+
+    font-size: 15px;
+    line-height: 30px;
+  }
+}
+@media (min-width: $desktop-width) {
+  .video {
+    flex-direction: row;
+  }
+  .video__wrapper {
+    width: 255px;
+    margin-top: 100px;
+  }
+  .video__title {
+    padding: 0;
+  }
+  .video__play {
+    width: 682px;
+    margin-right: 78px;
+    margin-bottom: 0;
+  }
+  .video__order {
+    width: 230px;
+  }
+  .video__description {
+    padding: 0;
+  }
 }
