--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -1,5 +1,6 @@
 
 .main-nav {
+  position: relative;
   width: 320px;
   margin: 0 auto;
 }
@@ -13,7 +14,7 @@
 }
 .main-nav__item {
   @include clear;
-  display: block;
+  display: block; //чтобы реагировала ссылка на паддинги
 
   padding-top: 30px;
   padding-right: auto;
@@ -23,7 +24,7 @@
 
   @include border;
   color: $dark;
-  text-decoration: none;
+  // text-decoration: none;
 
   &:hover,
   &:focus {
@@ -33,43 +34,140 @@
   &:active {
     color: $grey;
   }
-}
-.page-header__delivery {
-  display: none;
-  font-size: 15px;
-  line-height: 24px;
-  font-weight: 400;
-}
-.main-nav__toggle {
-    position: absolute;
-    content: "";
-    top: 31px;
-    left: 60%;
-    display: block;
-    width: 20px;
-    height: 14px;
-    padding: 0;
-    border: none;
-    font-size: 0;
-    cursor: pointer;
 
-    &--open {
-      background: url("../img/icon-menu-open.svg") no-repeat;
-    }
-
-    &--close {
-      top: 28px;
-      right: 30px;
-      width: 21px;
-      height: 20px;
-      background: url("../img/icon-menu-close.svg") no-repeat;
-    }
-
+  &--search,
+  &--user {
+    position: relative;
+    &:hover,
     &:focus {
-      outline: none;
+      path {
+      fill: $tiffany;
+      }
     }
+
+    &:active {
+      path {
+      opacity: 0.3;
+      }
+    }
+  }
+  &--search-icon,
+  &--user-icon {
+    position: absolute;
+    top: 45%;
+    left: 2px;
+
+    width: 18px;
+    height: 18px;
+  }
+  &--user-icon {
+      width: 21px;
+  }
 }
 
+.main-nav__toggle {
+
+  position: absolute;
+  top: 31px;
+  left: 60%;
+  // z-index: 2;
+
+  display: block;
+  width: 20px;
+  height: 14px;
+  font-size: 0;
+
+  background-color: $light;
+  cursor: pointer;
+  border: none;
+
+  &:focus {
+    outline: none;
+  }
+}
+
+.main-nav--opened .main-nav__toggle::before {
+  content: "";
+
+  position: absolute;
+  top: -71px;
+  left: 0px;
+
+  width: 20px;
+  height: 2px;
+
+  background-color: $dark;
+  box-shadow: 0 7px 0 0 $dark, 0 14px 0 0 $dark;
+}
+
+// .main-nav--closed .main-nav__toggle:active::before {
+//   background-color: rgba(255, 255, 255, 0.3);
+//   box-shadow: 0 8px 0 0 rgba(255, 255, 255, 0.3), 0 16px 0 0 rgba(255, 255, 255, 0.3);
+// }
+
+.main-nav--closed .main-nav__toggle {
+  top: -61px;
+  // left: auto;
+  right: 20px;
+
+  &::before,
+  &::after {
+    content: "";
+
+    position: absolute;
+    top: 17px;
+    right: 0;
+
+    width: 21px;
+    height: 2px;
+
+    background-color: $dark;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+}
+// .main-nav__toggle { старые стили до лекции 5
+//     position: absolute;
+//     content: "";
+//     top: 31px;
+//     left: 60%;
+//     display: block;
+//     width: 20px;
+//     height: 14px;
+//     padding: 0;
+//     border: none;
+//     cursor: pointer;
+//
+//     &--open {
+//       background: url("../img/icon-menu-open.svg") no-repeat;
+//     }
+//
+//     &--close {
+//       top: 28px;
+//       right: 30px;
+//       width: 21px;
+//       height: 20px;
+//       background: url("../img/icon-menu-close.svg") no-repeat;
+//     }
+//
+//     &:focus {
+//       outline: none;
+//     }
+// }
+@media (max-width: $mobile-width-only) {
+
+  .main-nav--opened .main-nav__list--main,
+  .main-nav--opened .main-nav__list--user {
+    display: none;
+  }
+}
 
 @media (min-width: $tablet-width) {
   .main-nav {
@@ -105,13 +203,7 @@
     }
   }
 
-.page-header__delivery {
-    display: block;
-    position: absolute;
-    top: 115px;
-    left: 62%;
-    margin-left: auto;
-  }
+
 
 .main-nav__item {
   &--main {
@@ -193,8 +285,4 @@
   //     }
     }
   }
-  .page-header__delivery {
-      left: 72%;
-      // margin-left: auto;
-    }
 }
