--- a/sass/blocks/products.scss
+++ b/sass/blocks/products.scss
@@ -62,12 +62,14 @@
   margin-bottom: 28px;
 }
 
-.product__row {
-  margin-bottom: 10px;
-  padding-bottom: 10px;
+.product__option,
+.product__field {
+  @include border;
+  padding-top: 14px;
+  padding-bottom: 11px;
 
   font-size: 15px;
-  @include border;
+
 }
 
 .product__option {
@@ -82,6 +84,7 @@
 
 .product__price {
   @include clear;
+  display: block;
   margin-bottom: 26px;
 
   text-align: center;
