--- a/sass/global/fonts.scss
+++ b/sass/global/fonts.scss
@@ -1,15 +1,15 @@
 @font-face {
-  font-weight: 400;
+  font-weight: normal;
   font-family: "Open Sans";
-
+  font-style: normal;
   src: url("../fonts/opensans.woff") format("woff"),
     url("../fonts/opensans.woff2") format("woff2");
 }
 
 @font-face {
-  font-weight: 700;
+  font-weight: bold;
   font-family: "Open Sans Bold";
-
+  font-style: normal;
   src: url("../fonts/opensansbold.woff") format("woff"),
     url("../fonts/opensansbold.woff2") format("woff2");
 }
