--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -10,6 +10,7 @@ $light: #ffffff;
 $text-green: #63d1bb;
 $font-normal: "Open Sans", "Arial", sans-serif;
 $font-bold: "Open Sans Bold", "Arial", sans-serif;
+$mobile-width-only: 767px;
 $tablet-width: 768px;
 $desktop-width: 1150px;
 $retina-dpi: 144dpi;
