--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ a {
   cursor: pointer; }
 
 .container {
-  width: 320px;
+  width: 380px;
   box-sizing: border-box;
   margin: 0 auto;
   padding-left: 30px;
@@ -67,14 +67,11 @@ a {
 @media (min-width: 768px) {
   .container {
     width: 768px;
-    padding-left: 50px;
-    padding-right: 50px; } }
+    padding: 0; } }
 
 @media (min-width: 1150px) {
   .container {
-    width: 1150px;
-    padding-left: 50px;
-    padding-right: 50px; } }
+    width: 1150px; } }
 
 .page-header {
   display: flex;
@@ -89,12 +86,17 @@ a {
   padding: 0;
   list-style: none;
   border-bottom: 1px solid #ededed;
-  text-align: center; }
+  text-align: center;
+  cursor: pointer; }
   .page-header__logo--image {
-    display: block;
     width: 86px;
     height: 35px;
-    margin: 21px auto; }
+    margin: 21px 0;
+    margin-bottom: 15px; }
+    .page-header__logo--image:hover, .page-header__logo--image:focus {
+      opacity: 0.6; }
+    .page-header__logo--image:active {
+      opacity: 0.3; }
 
 .page-header__delivery {
   display: none;
@@ -104,7 +106,8 @@ a {
 
 @media (min-width: 768px) {
   .page-header__logo {
-    background-image: url("../img/mishka-logo-tablet.png");
+    padding-left: 50px;
+    padding-right: 50px;
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: 113px auto;
@@ -115,23 +118,23 @@ a {
   .page-header__delivery {
     display: block;
     position: absolute;
-    top: 115px;
-    left: 62%;
+    top: 105px;
+    left: 61%;
     margin-left: auto; } }
 
 @media (min-width: 1150px) {
   .page-header__logo {
     position: absolute;
-    right: 50%;
-    background-image: url("../img/mishka-logo-desktop.png");
-    background-position: 0 0;
-    background-repeat: no-repeat;
+    top: -12px;
+    right: 40%;
+    margin: 0;
+    border: 0;
     background-size: 149px auto; }
     .page-header__logo--image {
       width: 149px;
       height: 72px; }
   .page-header__delivery {
-    left: 72%; } }
+    left: 74.2%; } }
 
 .main-nav {
   position: relative;
@@ -150,11 +153,11 @@ a {
   padding: 0;
   list-style: none;
   display: block;
-  padding-top: 30px;
+  padding-top: 26px;
   padding-right: auto;
-  padding-bottom: 30px;
-  padding-left: 46px;
-  vertical-align: middle;
+  padding-bottom: 28px;
+  padding-left: 75px;
+  letter-spacing: 1.4px;
   border-bottom: 1px solid #ededed;
   color: #000000; }
   .main-nav__item:hover, .main-nav__item:focus {
@@ -169,17 +172,19 @@ a {
       opacity: 0.3; }
   .main-nav__item--search-icon, .main-nav__item--user-icon {
     position: absolute;
-    top: 45%;
-    left: 2px;
+    top: 40%;
+    left: 35px;
     width: 18px;
     height: 18px; }
   .main-nav__item--user-icon {
-    width: 21px; }
+    width: 21px;
+    left: 33px; }
 
 .main-nav__toggle {
   position: absolute;
-  top: 31px;
-  left: 60%;
+  bottom: 34px;
+  right: 30px;
+  border: 1px solid red;
   display: block;
   width: 20px;
   height: 14px;
@@ -193,22 +198,22 @@ a {
 .main-nav--opened .main-nav__toggle::before {
   content: "";
   position: absolute;
-  top: -71px;
+  top: 0px;
   left: 0px;
   width: 20px;
   height: 2px;
   background-color: #000000;
-  box-shadow: 0 7px 0 0 #000000, 0 14px 0 0 #000000; }
+  box-shadow: 0 6px 0 0 #000000, 0 12px 0 0 #000000; }
 
 .main-nav--closed .main-nav__toggle {
-  top: -61px;
-  right: 20px; }
+  top: -55px;
+  right: 25px; }
   .main-nav--closed .main-nav__toggle::before, .main-nav--closed .main-nav__toggle::after {
     content: "";
     position: absolute;
-    top: 17px;
+    top: 14px;
     right: 0;
-    width: 21px;
+    width: 28px;
     height: 2px;
     background-color: #000000; }
   .main-nav--closed .main-nav__toggle::before {
@@ -226,45 +231,69 @@ a {
   .main-nav {
     position: relative;
     width: auto;
-    margin: 0; }
+    margin: 0;
+    padding-left: 50px;
+    padding-right: 50px; }
   .main-nav__toggle {
     display: none; }
   .main-nav__list--main {
     display: flex;
-    justify-content: space-between;
-    width: 390px; }
+    width: 390px;
+    font-size: 15px; }
   .main-nav__list--user {
     display: flex;
     text-align: right;
     position: absolute;
     top: -85px;
-    left: 62%;
-    width: 350px; }
-  .main-nav__item--main {
-    padding-left: 0px;
-    margin-right: 36px;
-    border: 0; }
-    .main-nav__item--main:nth-child(even) {
-      margin-right: 0; }
-  .main-nav__item--user {
-    border-left: 1px solid #ededed; }
-  .main-nav__item--search {
-    font-size: 0;
-    border-left: 1px solid #ededed; } }
+    left: 48%;
+    width: 390px; }
+  .main-nav__item {
+    letter-spacing: 1.1px; }
+    .main-nav__item--main {
+      padding-top: 15px;
+      padding-bottom: 10px;
+      padding-right: 10px;
+      padding-left: 0px;
+      margin-right: 16px;
+      border: 0; }
+      .main-nav__item--main:nth-child(even) {
+        margin-right: 0; }
+    .main-nav__item--user {
+      padding-bottom: 34px;
+      border-left: 1px solid #ededed; }
+    .main-nav__item--search {
+      font-size: 0;
+      padding-bottom: 34px;
+      border-left: 1px solid #ededed; }
+    .main-nav__item--user-icon {
+      width: 21px;
+      left: 28px; } }
 
 @media (min-width: 1150px) {
   .main-nav {
     display: flex; }
+  .main-nav__list--main {
+    font-size: 16px;
+    padding-top: 15px;
+    padding-bottom: 28px; }
   .main-nav__list--user {
-    top: 0px;
-    width: 350px; }
+    top: 5px;
+    left: 64.8%; }
   .main-nav__list--extra {
     display: flex;
     position: absolute;
-    top: 80px;
-    margin-right: auto; }
+    top: 85px;
+    border-top: 1px solid red; }
+  .main-nav__item--main {
+    margin-right: 50px;
+    padding-right: 0;
+    letter-spacing: 1.2px; }
   .main-nav__item--extra {
-    border: none; } }
+    padding-top: 15px;
+    padding-left: 0;
+    margin-right: 40px;
+    border: 0;
+    font-size: 14px; } }
 
 .page-main__main-title {
   padding-top: 70px;
@@ -274,10 +303,11 @@ a {
   margin: 0;
   font-size: 27px;
   line-height: 30px;
-  font-weight: 700;
+  font-weight: bold;
   text-align: center;
   color: #000000;
-  background: transparent; }
+  background: transparent;
+  letter-spacing: 1.2px; }
   .page-main__main-title--catalog {
     padding-top: 73px;
     padding-bottom: 78px;
@@ -288,6 +318,22 @@ a {
     padding-bottom: 75px;
     margin-bottom: 25px;
     background-color: #f2f2f2; }
+  @media (min-width: 768px) {
+    .page-main__main-title {
+      width: 515px;
+      margin: 0 auto;
+      padding-top: 100px;
+      font-size: 43px;
+      line-height: 50px; }
+      .page-main__main-title br {
+        display: none; } }
+  @media (min-width: 1150px) {
+    .page-main__main-title {
+      width: 640px;
+      padding-top: 130px;
+      font-size: 50px;
+      line-height: 57px;
+      font-family: "Open Sans Bold"; } }
 
 .page-main__title {
   margin: 0;
@@ -299,46 +345,81 @@ a {
   color: #000000; }
 
 .products-type__header {
-  margin-bottom: 32px;
+  margin-bottom: 142px;
   margin-top: 0px;
-  background-color: #f9f9f9;
+  background-color: #fbfbfb;
   background-image: url("../img/hero-mobile@1x.jpg");
-  background-position: 0 0;
+  background-position: center -30px;
   background-repeat: no-repeat;
-  background-size: 320px auto;
-  height: 489px;
+  background-size: cover;
+  width: 320px;
+  height: 373px;
+  margin-top: -235px;
   border: 1px solid red; }
 
 .products-type__list {
   margin: 0;
   padding: 0;
   list-style: none;
+  margin-top: 280px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; }
+  justify-content: flex-end;
+  border: 1px solid blue; }
 
 .products-type__item {
-  padding-top: auto;
-  padding-bottom: auto;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 25px;
+  padding-bottom: 30px;
   font-size: 19px;
   line-height: 24px;
   font-weight: 700;
+  letter-spacing: 1.1px; }
+
+.products-type__link {
   color: #ffffff;
-  background-color: #63d1bb; }
+  position: relative; }
+  .products-type__link--furnishings::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 100px;
+    width: 40px;
+    height: 62px;
+    background-image: url("../img/interior.svg"); }
+  .products-type__link--toys::after {
+    position: absolute;
+    content: "";
+    top: 0px;
+    left: 150px;
+    width: 60px;
+    height: 60px;
+    background-image: url("../img/toy-svg.svg");
+    background-position: 0 0;
+    background-repeat: no-repeat; }
 
 .product__wrapper {
-  text-align: left; }
+  padding-left: 30px;
+  padding-right: 30px;
+  text-align: left;
+  border: 1px solid red; }
 
 .product__title {
-  margin-bottom: 10px; }
+  margin-bottom: 5px; }
 
 .product__label {
-  margin-bottom: 28px;
+  display: block;
+  margin-bottom: 22px;
   font-weight: 700;
+  text-transform: uppercase;
   color: #63d1bb; }
 
 .product__intro {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   font-size: 15px;
   line-height: 24px; }
 
@@ -377,7 +458,9 @@ a {
 @media (min-width: 768px) {
   .products-type__header {
     height: 746px;
-    background-size: 768px 746px; }
+    background-image: url("../img/hero-desktop.jpg");
+    background-size: 768px 746px;
+    margin-top: -300px; }
   .products-type__list {
     flex-direction: row;
     margin-top: 100px; }
@@ -409,7 +492,8 @@ a {
 @media (min-width: 1150px) {
   .products-type__header {
     height: 746px;
-    background-size: 1150px 746px; }
+    background-size: 1150px 746px;
+    margin-top: -200px; }
   .products-type__list {
     width: 1050px; }
   .products-type__item {
