--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -1,4 +1,3 @@
-
 .main-nav {
   position: relative;
   width: 320px;
@@ -16,15 +15,16 @@
   @include clear;
   display: block; //чтобы реагировала ссылка на паддинги
 
-  padding-top: 30px;
+  padding-top: 26px;
   padding-right: auto;
-  padding-bottom: 30px;
-  padding-left: 46px;
-  vertical-align: middle;
+  padding-bottom: 28px;
+  padding-left: 75px;
+  // text-align: center;
+  // vertical-align: middle;
+  letter-spacing: 1.4px;
 
   @include border;
   color: $dark;
-  // text-decoration: none;
 
   &:hover,
   &:focus {
@@ -54,23 +54,24 @@
   &--search-icon,
   &--user-icon {
     position: absolute;
-    top: 45%;
-    left: 2px;
+    top: 40%;
+    left: 35px;
 
     width: 18px;
     height: 18px;
   }
   &--user-icon {
       width: 21px;
+      left: 33px;
   }
 }
 
 .main-nav__toggle {
 
   position: absolute;
-  top: 31px;
-  left: 60%;
-  // z-index: 2;
+  bottom: 34px;
+  right: 30px;
+  border: 1px solid red;
 
   display: block;
   width: 20px;
@@ -90,35 +91,29 @@
   content: "";
 
   position: absolute;
-  top: -71px;
+  top: 0px;
   left: 0px;
 
   width: 20px;
   height: 2px;
 
   background-color: $dark;
-  box-shadow: 0 7px 0 0 $dark, 0 14px 0 0 $dark;
+  box-shadow: 0 6px 0 0 $dark, 0 12px 0 0 $dark;
 }
 
-// .main-nav--closed .main-nav__toggle:active::before {
-//   background-color: rgba(255, 255, 255, 0.3);
-//   box-shadow: 0 8px 0 0 rgba(255, 255, 255, 0.3), 0 16px 0 0 rgba(255, 255, 255, 0.3);
-// }
-
 .main-nav--closed .main-nav__toggle {
-  top: -61px;
-  // left: auto;
-  right: 20px;
+  top: -55px;
+  right: 25px;
 
   &::before,
   &::after {
     content: "";
 
     position: absolute;
-    top: 17px;
+    top: 14px;
     right: 0;
 
-    width: 21px;
+    width: 28px;
     height: 2px;
 
     background-color: $dark;
@@ -133,34 +128,7 @@
     transform: rotate(-45deg);
   }
 }
-// .main-nav__toggle { старые стили до лекции 5
-//     position: absolute;
-//     content: "";
-//     top: 31px;
-//     left: 60%;
-//     display: block;
-//     width: 20px;
-//     height: 14px;
-//     padding: 0;
-//     border: none;
-//     cursor: pointer;
-//
-//     &--open {
-//       background: url("../img/icon-menu-open.svg") no-repeat;
-//     }
-//
-//     &--close {
-//       top: 28px;
-//       right: 30px;
-//       width: 21px;
-//       height: 20px;
-//       background: url("../img/icon-menu-close.svg") no-repeat;
-//     }
-//
-//     &:focus {
-//       outline: none;
-//     }
-// }
+
 @media (max-width: $mobile-width-only) {
 
   .main-nav--opened .main-nav__list--main,
@@ -174,6 +142,7 @@
     position: relative;
     width: auto;
     margin: 0;
+    @include container;
   }
 
   .main-nav__toggle {
@@ -183,12 +152,9 @@
   .main-nav__list {
     &--main {
       display: flex;
-      justify-content: space-between;
-      // margin-right: auto;
-      // bottom: 0;
-      // transform: translateY(100%);
+
       width: 390px;
-      // font-size: 0;
+      font-size: 15px;
     }
 
     &--user {
@@ -196,20 +162,22 @@
       text-align: right;
       position: absolute;
       top: -85px;
-      left: 62%;
+      left: 48%;
 
-      width: 350px;
-      // font-size: 0;
+      width: 390px;
     }
   }
 
-
-
 .main-nav__item {
+  letter-spacing: 1.1px;
   &--main {
-      padding-left: 0px;
-      margin-right: 36px;
-      border: 0;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    padding-right: 10px;
+    padding-left: 0px;
+    margin-right: 16px;
+    border: 0;
+    // border-top: 1px solid $light-grey;
 
       &:nth-child(even) {
         margin-right: 0;
@@ -217,17 +185,21 @@
   }
 
   &--user {
-
-      // min-width: 82px;
+    padding-bottom: 34px;
     border-left: 1px solid $light-grey;
-      // font-size: 0;
-    }
+  }
   &--search {
     font-size: 0;
+    padding-bottom: 34px;
     border-left: 1px solid $light-grey;
+  }
+  &--user-icon {
+      width: 21px;
+      left: 28px;
   }
 }
 }
+
 @media (min-width: $desktop-width) {
   .main-nav {
     display: flex;
@@ -235,23 +207,28 @@
   }
 
   .main-nav__list {
-  //   &--main {
+    &--main {
+      font-size: 16px;
+      padding-top: 15px;
+      padding-bottom: 28px;
+      // float: left;
+      // transform: none;
 
-  //     float: left;
-  //     transform: none;
-  //   }
-  //
-  &--user {
-    top: 0px;
+    }
 
-    width: 350px;
-    // font-size: 0;
+    &--user {
+      top: 5px;
+      left: 64.8%;
+
+
   }
     &--extra {
+
       display: flex;
       position: absolute;
-      top: 80px;
-      margin-right: auto;
+      top: 85px;
+      // left: -30px;
+      border-top: 1px solid red;
       // left: 3%;
       // transform: translateY(100%);
       // display: block;
@@ -261,21 +238,25 @@
   }
 
   .main-nav__item {
-  //   &--main {
-  //     margin-right: 0;
-  //
-  //     &:nth-child(odd) {
-  //       width: 184px;
-  //     }
-  //
-  //     &:nth-child(even) {
-  //       padding-left: 35px;
-  //       border-left: 1px solid $light-grey;
-  //     }
-  //   }
-  //
+    &--main {
+      margin-right: 50px;
+      padding-right: 0;
+      letter-spacing: 1.2px;
+// border-left: 1px solid $light-grey;
+
+      // &:nth-child(odd) {
+      //   border: 0;
+      // }
+
+
+    }
+
     &--extra {
-      border: none;
+      padding-top: 15px;
+      padding-left: 0;
+      margin-right: 40px;
+      border: 0;
+      font-size: 14px;
       // &:nth-child(odd) {
       //   width: 184px;
       // }
