--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -14,35 +14,37 @@
   @include border;
 
   text-align: center;
-  // position: relative;
+  cursor: pointer;
 
   &--image {
-    display: block;
     width: 86px;
     height: 35px;
-    margin: 21px auto;
+    margin: 21px 0;
+    margin-bottom: 15px;
+
+  &:hover,
+  &:focus {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
   }
 }
+
 .page-header__delivery {
   display: none;
   font-size: 15px;
   line-height: 24px;
   font-weight: 400;
 }
-// .main__wrapper {
-//   width: 320px;
-//   box-sizing: border-box;
-//   margin: 0 auto;
-//   padding: 0 30px;
-//   border: 1px solid red;
-// }
 
 @media (min-width: $tablet-width) {
 
   .page-header__logo {
-    // margin-right: auto;
-    // background-color: $light;
-    background-image: url("../img/mishka-logo-tablet.png");
+    @include container;
+
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: 113px auto;
@@ -57,47 +59,30 @@
   .page-header__delivery {
       display: block;
       position: absolute;
-      top: 115px;
-      left: 62%;
+      top: 105px;
+      left: 61%;
       margin-left: auto;
-    }
+  }
 }
+
 @media (min-width: $desktop-width) {
 
   .page-header__logo {
     position: absolute;
-    right: 50%;
-    // margin-right: auto;
-    // background-color: $light;
-    background-image: url("../img/mishka-logo-desktop.png");
-    background-position: 0 0;
-    background-repeat: no-repeat;
+    top: -12px;
+    right: 40%;
+    margin: 0;
+    border: 0;
+
     background-size: 149px auto;
 
     &--image {
       width: 149px;
       height: 72px;
     }
-    // text-align: left;
   }
 
   .page-header__delivery {
-      left: 72%;
-      // margin-left: auto;
+      left: 74.2%;
   }
-  // .main__wrapper {
-  //   width: 1150px;
-  // }
 }
-//не получается задать стили для лого при наведении
-// .page-header__logo {
-//   &:hover,
-//   &:focus {
-//     .page-header__logo--image {
-//     fill: $dark-grey;
-//     }
-//   }
-//   &:active {
-//     fill: $grey;
-//   }
-// }
