--- a/sass/blocks/products.scss
+++ b/sass/blocks/products.scss
@@ -1,58 +1,100 @@
 .products-type__header {
-  margin-bottom: 32px;
+  margin-bottom: 142px;
   margin-top: 0px;
-  background-color: rgb(249, 249, 249);
+  background-color: rgb(251, 251, 251);
   background-image: url("../img/hero-mobile@1x.jpg");
-  background-position: 0 0;
+  background-position: center -30px;
   background-repeat: no-repeat;
-  background-size: 320px auto;
+  background-size: cover;
+  width: 320px;
+  height: 373px;
+  margin-top: -235px;
   // width: 320px;
-  height: 489px;
+  // height: 489px;
   border: 1px solid red;
+
+  // @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+  //   background-image: url("../img/hero-mobile@2x.jpg");
+  // }
 }
 
 .products-type__list {
   @include clear;
+  margin-top: 280px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: flex-end;
+  border: 1px solid blue;
   // align-items: flex-end;
   // margin-top: auto;
 }
 
 .products-type__item {
-  // @include clear;
-  // @include container;
-  padding-top: auto;
-  padding-bottom: auto;
+  @include clear;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 25px;
+  padding-bottom: 30px;
   font-size: 19px;
   line-height: 24px;
   font-weight: 700;
+  letter-spacing: 1.1px;
 
+  // background-color: $tiffany;
 
+  &--toys {
+    // background-color: #56c3b2;
+  }
+}
+.products-type__link {
   color: $light;
-  background-color: $tiffany;
+  position: relative;
+  &--furnishings::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 100px;
+    width: 40px;
+    height: 62px;
+    background-image: url("../img/interior.svg");
+  }
+
+  &--toys::after {
+    position: absolute;
+    content: "";
+    top: 0px;
+    left: 150px;
+    width: 60px;
+    height: 60px;
+    background-image: url("../img/toy-svg.svg");
+    background-position: 0 0;
+    background-repeat: no-repeat;
+  }
 }
 
 .product__wrapper {
-  // @include container;
+  padding-left: 30px;
+  padding-right: 30px;
   text-align: left;
+  border: 1px solid red;
 }
 
 .product__title {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .product__label {
-  margin-bottom: 28px;
+  display: block;
+  margin-bottom: 22px;
 
   font-weight: 700;
+  text-transform: uppercase;
 
   color: $tiffany;
 }
 
 .product__intro {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 
   font-size: 15px;
   line-height: 24px;
@@ -102,7 +144,9 @@
 @media (min-width: $tablet-width) {
   .products-type__header {
     height: 746px;
+    background-image: url("../img/hero-desktop.jpg");
     background-size: $tablet-width 746px;
+    margin-top: -300px;
   }
   .products-type__list {
     // width: 668px;
@@ -148,7 +192,9 @@
 @media (min-width: $desktop-width) {
   .products-type__header {
     height: 746px;
+    // background-position: center -50px;
     background-size: $desktop-width 746px;
+    margin-top: -200px;
   }
 
   .products-type__list {
