--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -13,7 +13,7 @@
 
   font-size: 27px;
   line-height: 30px;
-  font-weight: 700;
+  font-weight: bold;
   text-align: center;
 
   color: $dark;
@@ -21,4 +21,8 @@
 
 @mixin border {
   border-bottom: 1px solid $light-grey;
+}
+@mixin container {
+  padding-left: 50px;
+  padding-right: 50px;
 }
