--- a/css/style.css
+++ b/css/style.css
@@ -306,8 +306,15 @@ a {
   font-weight: bold;
   text-align: center;
   color: #000000;
-  background: transparent;
-  letter-spacing: 1.2px; }
+  letter-spacing: 1.2px;
+  background-color: #fbfbfb;
+  background-image: url("../img/hero-mobile@1x.jpg");
+  background-position: center -30px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 320px;
+  height: 373px;
+  padding-bottom: 0; }
   .page-main__main-title--catalog {
     padding-top: 73px;
     padding-bottom: 78px;
@@ -345,27 +352,18 @@ a {
   color: #000000; }
 
 .products-type__header {
-  margin-bottom: 142px;
-  margin-top: 0px;
-  background-color: #fbfbfb;
-  background-image: url("../img/hero-mobile@1x.jpg");
-  background-position: center -30px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 320px;
-  height: 373px;
-  margin-top: -235px;
-  border: 1px solid red; }
+  margin-bottom: 27px; }
+  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+    .products-type__header {
+      background-image: url("../img/hero-mobile@2x.jpg"); } }
 
 .products-type__list {
   margin: 0;
   padding: 0;
   list-style: none;
-  margin-top: 280px;
+  margin-top: -115px;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  border: 1px solid blue; }
+  flex-direction: column; }
 
 .products-type__item {
   margin: 0;
@@ -378,29 +376,35 @@ a {
   font-size: 19px;
   line-height: 24px;
   font-weight: 700;
-  letter-spacing: 1.1px; }
+  letter-spacing: 1.1px;
+  background-color: #63d1bb; }
+  .products-type__item--toys {
+    background-color: #56c3b2; }
 
 .products-type__link {
   color: #ffffff;
   position: relative; }
-  .products-type__link--furnishings::after {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 100px;
-    width: 40px;
-    height: 62px;
-    background-image: url("../img/interior.svg"); }
-  .products-type__link--toys::after {
+  .products-type__link::after {
     position: absolute;
     content: "";
     top: 0px;
-    left: 150px;
-    width: 60px;
-    height: 60px;
-    background-image: url("../img/toy-svg.svg");
+    left: 216px;
     background-position: 0 0;
     background-repeat: no-repeat; }
+  .products-type__link--furnishings::after {
+    width: 61px;
+    height: 62px;
+    background-image: url("../img/icon-interior.svg"); }
+    .products-type__link--furnishings::after path {
+      opacity: 0.5;
+      fill: red; }
+  .products-type__link--toys::after {
+    top: -5px;
+    left: 205px;
+    width: 60px;
+    height: 60px;
+    opacity: 0.5;
+    background-image: url("../img/icon-toy.svg"); }
 
 .product__wrapper {
   padding-left: 30px;
