--- a/sass/blocks/products.scss
+++ b/sass/blocks/products.scss
@@ -1,30 +1,30 @@
 .products-type__header {
-  margin-bottom: 142px;
-  margin-top: 0px;
-  background-color: rgb(251, 251, 251);
-  background-image: url("../img/hero-mobile@1x.jpg");
-  background-position: center -30px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 320px;
-  height: 373px;
-  margin-top: -235px;
+  // position: absolute;
+  // top: 78px;
+  margin-bottom: 27px;
+  // background-color: rgb(251, 251, 251);
+  // background-image: url("../img/hero-mobile@1x.jpg");
+  // background-position: center 0;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // width: 320px;
+  // height: 373px;
+  // margin-top: -100px;
   // width: 320px;
   // height: 489px;
-  border: 1px solid red;
 
-  // @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-  //   background-image: url("../img/hero-mobile@2x.jpg");
-  // }
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/hero-mobile@2x.jpg");
+  }
 }
 
 .products-type__list {
   @include clear;
-  margin-top: 280px;
+  margin-top: -115px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  border: 1px solid blue;
+  // justify-content: flex-end;
+  // border: 1px solid blue;
   // align-items: flex-end;
   // margin-top: auto;
 }
@@ -40,35 +40,42 @@
   font-weight: 700;
   letter-spacing: 1.1px;
 
-  // background-color: $tiffany;
+  background-color: $tiffany;
 
   &--toys {
-    // background-color: #56c3b2;
+    background-color: #56c3b2;
   }
 }
 .products-type__link {
   color: $light;
   position: relative;
-  &--furnishings::after {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 100px;
-    width: 40px;
-    height: 62px;
-    background-image: url("../img/interior.svg");
-  }
-
-  &--toys::after {
+  &::after {
     position: absolute;
     content: "";
     top: 0px;
-    left: 150px;
-    width: 60px;
-    height: 60px;
-    background-image: url("../img/toy-svg.svg");
+    left: 216px;
     background-position: 0 0;
     background-repeat: no-repeat;
+  }
+
+  &--furnishings::after {
+    width: 61px;
+    height: 62px;
+
+    background-image: url("../img/icon-interior.svg");
+    path {
+    opacity: 0.5;
+    fill: red;
+    }
+  }
+
+  &--toys::after {
+    top: -5px;
+    left: 205px;
+    width: 60px;
+    height: 60px;
+    opacity: 0.5;
+    background-image: url("../img/icon-toy.svg");
   }
 }
 
